test/rewriter/errors/expr_integer_literal_octal.ml
let invalid_integer_literal = [%yojson 0o777777777777777777777777777777777777777777777]
