test/rewriter/errors/expr_integer_literal_octal.expected
File "expr_integer_literal_octal.ml", line 1, characters 39-86:
Error: ppx_yojson: unsupported payload